[package]
authors = []
edition = { workspace = true }
name    = "rujira-fin"
version = "1.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.thorchain]
# See more about format in https://doc.rust-lang.org/cargo/reference/manifest.html#the-metadata-table
auditors  = ["Halborn"]
audits    = ["https://www.halborn.com/audits/thorchain/ruji-trade-fin-4604e5"]
commit    = "80b48eddc0f16f735855442fdbc5423ac5398ff6"
deployers = ["thor1e0lmk5juawc46jwjwd0xfz587njej7ay5fh6cd"]
docs      = "https://docs.rujira.network/products/ruji-trade"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
mock    = ["anyhow", "cw-multi-test", "rujira-rs-testing", "rujira-bow"]

[dependencies]
anyhow            = { workspace = true, optional = true }
cosmwasm-schema   = { workspace = true }
cosmwasm-std      = { workspace = true }
cw-multi-test     = { workspace = true, optional = true }
cw-storage-plus   = { workspace = true }
cw-utils          = { workspace = true }
cw2               = { workspace = true }
itertools         = { workspace = true }
rujira-bow        = { path = "../rujira-bow", optional = true }
rujira-rs         = { workspace = true, features = ["interface-fin", "interface-bow", "decimal-scaled", "premium", "oracle", "query", "bid-pool", "exchange", "merge-n-by-iter"], default-features = false }
rujira-rs-testing = { workspace = true, optional = true }
schemars          = { workspace = true }
serde             = { workspace = true }
thiserror         = { workspace = true }

[dev-dependencies]
cw-multi-test         = { workspace = true }
rujira-bow            = { path = "../rujira-bow" }
rujira-ghost-vault    = { path = "../rujira-ghost-vault" }
rujira-rs-testing     = { workspace = true }
rujira-thorchain-swap = { path = "../rujira-thorchain-swap", features = ["mock"] }
