[package]
authors = []
edition = { workspace = true }
name    = "rujira-ghost-credit"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
mock    = ["anyhow", "cw-multi-test", "rujira-account", "rujira-rs-testing"]

[dependencies]
anyhow            = { workspace = true, optional = true }
cosmwasm-schema   = { workspace = true }
cosmwasm-std      = { workspace = true }
cw-multi-test     = { workspace = true, optional = true }
cw-storage-plus   = { workspace = true }
cw-utils          = { workspace = true }
cw2               = { workspace = true }
rujira-account    = { path = "../rujira-account", optional = true }
rujira-rs         = { workspace = true, features = ["interface-account", "interface-ghost", "oracle", "native-balance-plus"], default-features = false }
rujira-rs-testing = { workspace = true, optional = true }
schemars          = { workspace = true }
serde             = { workspace = true }
sha2              = { workspace = true }
thiserror         = { workspace = true }

[dev-dependencies]
anyhow             = { workspace = true }
cw-multi-test      = { workspace = true }
rujira-account     = { path = "../rujira-account" }
rujira-bow         = { path = "../rujira-bow", features = ["mock"] }
rujira-fin         = { path = "../rujira-fin", features = ["mock"] }
rujira-ghost-vault = { path = "../rujira-ghost-vault", features = ["mock"] }
rujira-rs-testing  = { workspace = true }
