[package]
authors = []
edition = { workspace = true }
name    = "rujira-ghost-vault"
version = "1.0.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
mock    = ["anyhow", "cw-multi-test", "rujira-rs-testing"]

[dependencies]
anyhow            = { workspace = true, optional = true }
cosmwasm-schema   = { workspace = true }
cosmwasm-std      = { workspace = true }
cw-multi-test     = { workspace = true, optional = true }
cw-storage-plus   = { workspace = true }
cw-utils          = { workspace = true }
cw2               = { workspace = true }
rujira-rs         = { workspace = true, features = ["interface-ghost", "share-pool", "token-factory"], default-features = false }
rujira-rs-testing = { workspace = true, optional = true }
schemars          = { workspace = true }
serde             = { workspace = true }
thiserror         = { workspace = true }
